information-system-prototype/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: career-guide
  labels:
    app.kubernetes.io/part-of: career-guide
